# palisade-config

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  palisade_benchmark_results.txt
.github/workflows/: ci.yml  security.yml
benches/: config_benches.rs  config_performance.rs  policy_checks.rs  tag_derivation.rs  validation.rs
benchmark_analysis/: parsed_rows.csv  summary.csv  summary.json
examples/: README.md  advanced_policy.rs  basic_config.rs  basic_defaults.rs  basic_usage.rs  change_tracking.rs  comprehensive_validation.rs  config.toml  diffing.rs  full_integration.rs  policy.toml  policy_hot_reload.rs  production_deployment.rs  runtime_hot_paths.rs  runtime_no_alloc.rs  tag_derivation.rs  timing_profile.rs  toml_loading.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_from_toml.rs  policy_from_toml.rs
scripts/: ANALYZE_BENCH_RESULTS_USAGE.md  analyze_bench_results.py
src/: api.rs  config.rs  defaults.rs  errors.rs  hardened.rs  lib.rs  policy.rs  runtime.rs  secure_fs.rs  tags.rs  timing.rs  validation.rs
tests/: integration.rs  property.rs  proptest.rs  security.rs
