[package]
name = "palisade-config"
version = "2.0.0"
edition = "2024"
authors = ["Guilherme F. G. Santos <strukturaenterprise@gmail.com>"]
license = "Apache-2.0"
description = "Security-conscious configuration management for honeypot systems with cryptographic tag derivation"
repository = "https://github.com/Guivernoir/palisade-config"
documentation = "https://docs.rs/palisade-config"
keywords = [
    "honeypot",
    "security",
    "configuration",
    "deception",
    "cryptography",
]
categories = ["config", "cryptography", "authentication"]
readme = "README.md"

[dependencies]
# Palisade ecosystem
palisade-errors = { version = "2.0.0", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Cryptography
sha3 = "0.10"
hex = "0.4"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# System info
hostname = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Platform detection
cfg-if = "1.0"
libc = "0.2.180"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread"] }
heapless = { version = "0.9.1", features = ["serde"] }

[dev-dependencies]
# Testing
proptest = "1.4"
tempfile = "3.8"
criterion = { version = "0.8.1", features = ["html_reports"] }
serde_json = "1.0"
stats_alloc = "0.1.10"

[features]
default = []
log = ["palisade-errors/log"]

# ============================================================================
# EXAMPLES
# ============================================================================

[[example]]
name = "basics"
path = "examples/basic_defaults.rs"

[[example]]
name = "toml_loading"
path = "examples/toml_loading.rs"

[[example]]
name = "hot_paths"
path = "examples/runtime_hot_paths.rs"

[[example]]
name = "derivation"
path = "examples/tag_derivation.rs"

[[example]]
name = "diffing"
path = "examples/diffing.rs"

[[example]]
name = "advanced_policy"
path = "examples/advanced_policy.rs"

[[example]]
name = "timing"
path = "examples/timing_profile.rs"

[[example]]
name = "full"
path = "examples/full_integration.rs"

# ============================================================================
# BENCHMARKS
# ============================================================================

[[bench]]
name = "config_bench"
path = "benches/config_performance.rs"
harness = false

# ============================================================================
# TESTS
# ============================================================================

[[test]]
name = "integration_tests"
path = "tests/integration.rs"

[[test]]
name = "property_tests"
path = "tests/property.rs"

[[test]]
name = "security_tests"
path = "tests/security.rs"

# ============================================================================
# PROFILE CONFIGURATIONS
# ============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.test]
opt-level = 2
